k8s/ticket_auth_depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticket-auth-pod
  template:
    metadata:
      labels:
        app: ticket-auth-pod
    spec:
      containers:
       - name: ticket-auth-container
         image: kumarsm2405/ticketing_auth
---
apiVersion: v1
kind: Service
metadata:
  name: ticket-auth-src
spec:
  selector:
    app: ticket-auth-pod
  ports:
  - name: tick-auth-service
    protocol: TCP
    port: 4000
    targetPort: 4000
