k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ingress-services
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: ticket.dev
      http:
        paths:
          - path: '/api/users/?.*'
            pathType: Prefix
            backend:
              service:
                name: ticket-auth-src
                port:
                  number: 4000
